--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
+    "@vercel/speed-insights": "^1.0.2",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
