--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@vercel/speed-insights": "^1.0.2",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
+    "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "axios": "^1.6.5"
+
   },
   "devDependencies": {
     "@types/node": "^20",
